--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,8 @@
 
 @import '@components/header/header';
 @import '@components/footer/footer';
+@import '@components/card/card';
+
 
 @import '@pages/home/home';
-@import '@pages/demo-rbc/demo-rbc';
+//@import '@pages/demo-rbc/demo-rbc';
