--- a/src/pug/mixins.pug
+++ b/src/pug/mixins.pug
@@ -2,3 +2,4 @@ include mixins/picture
 include mixins/svg
 include @components/sharing/sharing
 include @components/router/router
+include @components/card/card
